memos-k8s/memos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: memos
  name: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: memos
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: memos
    spec:
      containers:
        - image: docker.io/neosmemo/memos:0.31.0
          name: memos
          ports:
            - containerPort: 5230
              protocol: TCP
          volumeMounts:
            - mountPath: /var/opt/memos
              name: app-storage
      restartPolicy: Always
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-storage
