memos-k8s/memos-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: memos
  name: memos
spec:
  ports:
    - name: "http"
      port: 5230
      targetPort: 5230
      protocol: TCP
  selector:
    io.kompose.service: memos
