memos-k8s/memos-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    tailscale.com/proxy-group: ingress-proxies
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    # cert-manager.io/duration: 200h
    # cert-manager.io/private-key-size: "4096"
    # cert-manager.io/renew-before: 144h
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: memos
spec:
  ingressClassName: tailscale
  rules:
  - host: memos.tailbc382.ts.net
    http:
      paths:
      - backend:
          service:
            name: memos
            port:
              number: 5230
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - memos.tailbc382.ts.net
    secretName: memos-tls
